Viewer トップページ集計 API を追加 (#791)
