# src/server/packages/SiteStats/Application/Viewer/Query/SiteStats.php
@@ -1,0 +1,12 @@
+<?php
+
+declare(strict_types=1);
+
+namespace SiteStats\Application\Viewer\Query;
+
+readonly class SiteStats
+{
+    public function __construct(public int $songCount)
+    {
+    }
+}
