# src/server/packages/SiteStats/Application/Viewer/UseCase/Get/GetOutputData.php
@@ -1,0 +1,12 @@
+<?php
+
+declare(strict_types=1);
+
+namespace SiteStats\Application\Viewer\UseCase\Get;
+
+readonly class GetOutputData
+{
+    public function __construct(public int $songCount)
+    {
+    }
+}
