# src/server/routes/viewer.php
@@ -4,11 +4,13 @@ declare(strict_types=1);
 
 use App\Http\Controllers\Api\Viewer\V1\Media\GetMediaController;
 use App\Http\Controllers\Api\Viewer\V1\Media\ListMediaController;
+use App\Http\Controllers\Api\Viewer\V1\SiteStats\GetSiteStatsController;
 use App\Http\Controllers\Api\Viewer\V1\Song\GetSongController;
 use App\Http\Controllers\Api\Viewer\V1\Song\ListSongController;
 use App\Http\Middleware\Viewer\ViewerOpenApiValidator;
 use Illuminate\Support\Facades\Route;
 use Media\Route\ViewerMediaRouteMap;
+use SiteStats\Route\ViewerSiteStatsRouteMap;
 use Song\Route\ViewerSongRouteMap;
 
 Route::middleware(ViewerOpenApiValidator::class)->group(function () {
@@ -21,5 +23,6 @@ Route::middleware(ViewerOpenApiValidator::class)->group(function () {
             Route::get('/', [ListMediaController::class, 'handle'])->name(ViewerMediaRouteMap::List);
             Route::get('/{mediaId}', [GetMediaController::class, 'handle'])->name(ViewerMediaRouteMap::Get);
         });
+        Route::get('/site-stats', [GetSiteStatsController::class, 'handle'])->name(ViewerSiteStatsRouteMap::Get);
     });
 });
